# NeuralSDF

./: CMakeLists.txt  eval.ipynb  main.cpp  readme.md
data/: sdf1_arch_test.txt
include/: float3_cpu.h  module.h  neural_network.h  neural_sdf.h  public_camera.h  public_image.h  public_scene.h  stb_image_write.h  train.h  utils.h
src/: cuda_kernel.cu  module.cpp  module_kernel.cu  neural_network.cpp  public_image.cpp  utils.cpp
